# zeply_hd_wallet

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker/wallet/: Dockerfile  entrypoint.sh
src/apps/rest_api/: alembic.ini  database.py  entrypoint.py
src/apps/rest_api/alembic/: env.py
src/apps/rest_api/alembic/versions/: ce5886deed0c_.py
src/apps/rest_api/orm/: models.py
src/apps/rest_api/schemas/: schemas.py
src/domain/entitites/: hdwallet.py
src/domain/entitites/coins/: bitcoin.py  coin.py  coin_factory.py  coins_code.py  ethereum.py
src/domain/services/: generate_address.py
src/tests/e2e/: conftest.py  test_rest_api.py
